Changes to posts and styling. Fixes header on individual blog posts.

--- a/_posts/2020-02-05-Who Am I.md
+++ b/_posts/2020-02-05-Who Am I.md
@@ -4,7 +4,7 @@ author: Bryce Crist (Mochamethod)
 title: Who Am I?
 --- 
 ## A long winded introspection:
-### &nbsp;&nbsp;&nbsp;&nbsp;Well, not sure where to start. Guess I could start with the myriad of events that have happened this last year and work from there.  
+### &nbsp;&nbsp;Well, not sure where to start. Guess I could start with the myriad of events that have happened this last year and work from there.  
 
 &nbsp;&nbsp;&nbsp;&nbsp;Let's see... I still work at the same job I did last year; I have gained some weight; I have started drinking more; my mom got cancer, but fought it and lived; my dad is working as hard as ever at a job that should pay him five times as much; I'm almost at my five year anniversary with the love of my life; I've improved my programming skills; I've made more work friends; the winter weather isn't as terrible this year, but because of the whole climate change situation that may not be for the best; cops are still frightening and basically only seem to serve as a guarantee for force and financial and social endangerment; Australia was burned to the ground; a new virus broke out in Asia and has now spread throughout the world threating the lives of thousands; and the POTUS is still as terrible as ever and the Senate has failed us. 
 
